assets/style/style.css
    .text {
        font-family: 'Special Elite', cursive;
        text-align: center;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        /*color: white;*/
    }
    
    .uk-container {
        margin: auto;
    }
    
    .writing {
        font-family: 'Special Elite', cursive;
    }
    
    .uk-inline {
        font-family: 'Special Elite', cursive;
    }
    
    #title {
        font-family: 'Special Elite', cursive;
    }
    
    .uk-navbar-nav {
        margin-right: 30px;
    }
    
    .current-weather {
        font-family: 'Special Elite', cursive;
        opacity: 60%;
        margin-left: 20px;
        margin-top: 22px;
    }
    
    .icon {
        padding: 0px;
        margin-top: -2px;
    }
    
    #enterCity {
        width: 150px;
        text-align: center;
        padding: 12px;
        font-size: 13px;
    }
    
    .writing {
        font-family: 'Special Elite', cursive;
    }
    
    .uk-inline {
        font-family: 'Special Elite', cursive;
    }
    
    .uk-card-body {
        font-family: 'Special Elite', cursive;
    }
    
    .uk-card-title {
        font-family: 'Special Elite', cursive;
    }
    
    #home {
        font-family: 'Special Elite', cursive;
    }
    
    #about {
        font-family: 'Special Elite', cursive;
    }
    
    .img {
        position: absolute;
    }
    
    #suggestionPage {
        display: none;
    }
    
    .imgOne {
        height: 300px;
        width: 200px;
    }

